Add correct position for address icon

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -18,6 +18,7 @@
     &::before {
       content: url("../../assets/images/city-icon.svg");
       position: relative;
+      top: 5px;
       left: -8px;
     }
   }
