--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -196,7 +196,7 @@
 
 .menu-social {
   position: relative;
-  top: 40%;
+  top: calc(50% - 120px);
   transform: translateY(-50%);
   width: 300px;
   margin-left: 96px;
