--- a/src/index.scss
+++ b/src/index.scss
@@ -68,7 +68,14 @@ button {
   border-style: none;
 }
 
+.hidden-desc {
+  @media (max-width: 1440px) {
+    display: none;
+  }
+}
+
 .wrapper {
+  position: relative;
   margin: 0 auto;
   width: 1248px;
 
