--- a/src/pages/OrderPage/components/Autocomplete/styles.scss
+++ b/src/pages/OrderPage/components/Autocomplete/styles.scss
@@ -11,7 +11,7 @@
 
 ::-webkit-scrollbar {
   width: 6px;
-  background-color: white;
+  background-color: var(--color-light-grey);;
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
