--- a/src/pages/OrderPage/components/Main/styles.scss
+++ b/src/pages/OrderPage/components/Main/styles.scss
@@ -1,14 +1,19 @@
 .main {
   width: 100%;
   overflow: hidden;
+
+  @media (max-width: 1023px) {
+    overflow: auto;
+  }
 }
 
 .main-content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  height: 100%;
 
-  @media (max-width: 767px) {
+  @media (max-width: 1023px) {
     flex-direction: column;
   }
 }
@@ -18,5 +23,38 @@
 
   @media (max-width: 767px) {
     padding: 16px 0;
+  }
+}
+
+.content-wrapper {
+  height: calc(100% - 154px);
+}
+
+.mobile-buttons {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  flex-direction: row;
+  justify-content: space-between;
+
+  @media (max-width: 1440px) {
+    display: flex;
+  }
+
+  &__item {
+    background: linear-gradient(90deg, #0ec261 2.61%, #039f67 112.6%);
+    width: 48px;
+    height: 48px;
+    margin-right: 20px;
+
+    @media (max-width: 1440px) {
+      width: 62px;
+    }
+
+    svg {
+      height: 25px;
+      width: 25px;
+      fill: white;
+    }
   }
 }
