--- a/src/pages/OrderPage/components/OrderInfo/styles.scss
+++ b/src/pages/OrderPage/components/OrderInfo/styles.scss
@@ -5,9 +5,18 @@
   width: 320px;
   padding-left: 32px;
   padding-top: 32px;
+  margin-bottom: 30px;
 
-  @media (max-width: 767px) {
+  @media (max-width: 1440px) {
+    left: 50%;
+    transform: translateX(-50%);
     padding-left: 0;
+  }
+
+  @media (max-width: 1023px) {
+    left: 50%;
+    transform: translateX(-50%);
+    padding-top: 16px;
   }
 
   @media (max-width: 450px) {
@@ -16,18 +25,14 @@
 
   &::before {
     position: absolute;
-    top: 8px;
-    left: -32px;
+    top: 0;
+    left: 0;
     content: '';
     height: 100vh;
     width: 1px;
     background: var(--color-light-grey);
 
     @media (max-width: 1440px) {
-      left: 16px;
-    }
-
-    @media (max-width: 767px) {
       display: none;
     }
   }
@@ -37,7 +42,12 @@
     font-size: 18px;
     line-height: 21px;
     text-align: right;
-    @media (max-width: 767px) {
+
+    @media (max-width: 1440px) {
+      text-align: center;
+    }
+
+    @media (max-width: 1023px) {
       text-align: left;
     }
   }
@@ -55,50 +65,37 @@
   .point {
     display: flex;
     flex-direction: row;
+    align-items: flex-end;
     margin-bottom: 16px;
 
-    @media (max-width: 767px) {
-      margin-bottom: 0;
-    }
-
-    p {
+    div {
       display: flex;
       align-items: flex-end;
-      margin: 0;
-      font-weight: 300;
-      font-size: 14px;
-      line-height: 16px;
-      width: 100%;
-
-      @media (max-width: 767px) {
-        font-size: 13px;
-      }
     }
 
     &__key {
       color: var(--color-black);
+      text-align: left;
+      font-size: 14px;
+      line-height: 16px;
+      font-weight: 300;
     }
 
     &__value {
+      display: flex;
+      flex-direction: column;
       color: var(--color-dark-grey);
+      font-size: 14px;
+      line-height: 16px;
+      font-weight: 300;
+      text-align: right;
     }
 
     &__dots {
-      width: 100%;
-      margin: 0 12px;
       border-bottom: 2px dotted var(--color-dark-grey);
-    }
-  }
-
-  &__button {
-
-    &--active {
-      background-color: var(--color-green);
-    }
-
-    @media (max-width: 767px) {
-      width: 100%;
-      margin-bottom: 30px;
+      flex: 1 0;
+      height: 1em;
+      margin: 0 .4em;
     }
   }
 }
