--- a/src/pages/OrderPage/components/YandexMap/styles.scss
+++ b/src/pages/OrderPage/components/YandexMap/styles.scss
@@ -18,16 +18,12 @@
   height: 352px;
 
   @media (max-width: 1440px) {
-    width: 500px;
-    height: 250px;
+    width: 100%;
+    height: 450px;
   }
 
   @media (max-width: 1023px) {
-    width: 400px;
-    height: 190px;
-  }
-
-  @media (max-width: 767px) {
     width: 100%;
+    height: 190px;
   }
 }
