--- a/src/pages/OrderPage/components/Main/styles.scss
+++ b/src/pages/OrderPage/components/Main/styles.scss
@@ -32,10 +32,10 @@
 
 .mobile-buttons {
   display: none;
-  position: fixed;
+  position: sticky;
   bottom: 20px;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
 
   @media (max-width: 1440px) {
     display: flex;
@@ -45,11 +45,7 @@
     background: linear-gradient(90deg, #0ec261 2.61%, #039f67 112.6%);
     width: 48px;
     height: 48px;
-    margin-right: 20px;
-
-    @media (max-width: 1440px) {
-      width: 62px;
-    }
+    margin-left: 20px;
 
     svg {
       height: 25px;
