--- a/src/pages/OrderPage/components/Result/styles.scss
+++ b/src/pages/OrderPage/components/Result/styles.scss
@@ -13,6 +13,14 @@
   display: flex;
   flex-direction: column;
 
+  &__title {
+    margin: 0;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    padding-bottom: 16px;
+  }
+
   &__model {
     font-size: 18px;
     line-height: 21px;
