--- a/src/pages/OrderPage/components/Radio/styles.scss
+++ b/src/pages/OrderPage/components/Radio/styles.scss
@@ -11,14 +11,15 @@
   margin-bottom: 8px;
 
   input[type='radio'] {
-    position: relative;
+    position: absolute;
     margin: 0 8px 0 0;
-    width: 12px;
-    height: 12px;
+    width: 100%;
+    height: 100%;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     outline: none;
+    z-index: 2;
 
     &:hover {
       cursor: pointer;
@@ -28,8 +29,8 @@
   input[type='radio']::before {
     content: '';
     position: absolute;
-    top: 8px;
-    left: 50%;
+    top: 11px;
+    left: 7px;
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -41,8 +42,8 @@
   input[type='radio']:checked::after {
     content: '';
     position: absolute;
-    top: 8px;
-    left: 50%;
+    top: 11px;
+    left: 7px;
     width: 7px;
     height: 7px;
     border-radius: 50%;
@@ -53,12 +54,15 @@
   }
 
   label {
+    position: relative;
+    left: 20px;
     font-style: normal;
     font-weight: 300;
     font-size: 14px;
     line-height: 16px;
-    margin-right: 16px;
+    margin-right: 36px;
     color: var(--color-dark-grey);
+    z-index: 1;
 
     &:hover {
       cursor: pointer;
