--- a/src/pages/OrderPage/components/YandexMap/styles.scss
+++ b/src/pages/OrderPage/components/YandexMap/styles.scss
@@ -18,6 +18,10 @@
   height: 352px;
 
   @media (max-width: 1440px) {
+    width: 500px;
+  }
+
+  @media (max-width: 1200px) {
     width: 100%;
     height: 450px;
   }
